subida base proyecto

--- a/view/index.html
+++ b/view/index.html
@@ -24,9 +24,8 @@
             <section class="horarios-clase">
                 <h1>Horarios</h1>
                 <div style="width: 100%;">
-                    <select class="select-horarios" name="" id="">
+                    <select class="select-horarios" name="" id="slctCursos">
                         <option value="" selected disabled>Selecciona un curso</option>
-                        <!-- <option value="">Desarrollo Aplicaciones Web</option> -->
                     </select>
                 </div>
                 <br>
